Update shopping cart implementation